[package]
name = "either"
version = "1.2.0"
authors = ["bluss"]

license = "MIT/Apache-2.0"
repository = "https://github.com/bluss/either"
documentation = "https://docs.rs/either/1/"

description = """
The enum `Either`, with variants `Left` and `Right` and trait implementations including Iterator, Read, Write.

Either has methods that are similar to Option and Result.

Includes convenience macros `try_left!()` and `try_right!()` to use for short-circuiting logic."""

keywords = ["data-structure", "no_std"]
categories = ["data-structures", "no-std"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
default = ["use_std"]
use_std = []

[package.metadata.release]
no-dev-version = true
