[package]
name = "either"
version = "1.13.0"
authors = ["bluss"]
edition = "2018"
rust-version = "1.37"

license = "MIT OR Apache-2.0"
repository = "https://github.com/rayon-rs/either"
documentation = "https://docs.rs/either/1/"
readme = "README-crates.io.md"

description = """
The enum `Either` with variants `Left` and `Right` is a general purpose sum type with two cases.
"""

keywords = ["data-structure", "no_std"]
categories = ["data-structures", "no-std"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
borsh = { version = "1.5.4", optional = true, features = ["derive"] } # using 1.5.4 as it is good regarding syn

[features]
default = ["use_std", "borsh"]
use_std = []

[dev-dependencies]
serde_json = "1.0.0"

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[package.metadata.docs.rs]
features = ["serde", "borsh"]

[package.metadata.playground]
features = ["serde", "borsh"]
